# reflex

./: Cargo.toml  README.md
reflex/: Cargo.toml
reflex-engine/: Cargo.toml
reflex-engine/src/: lib.rs
reflex-engine/src/actor/: bytecode_interpreter.rs  mod.rs  wasm_interpreter.rs
reflex-engine/src/task/: bytecode_worker.rs  mod.rs  wasm_worker.rs
reflex-parser/: Cargo.toml
reflex-parser/src/: lib.rs
reflex-parser/src/syntax/: js.rs  json.rs  sexpr.rs
reflex-tests/: Cargo.toml
reflex-tests/src/: client.rs  lib.rs  server.rs
reflex-tests/tests/: main.rs
reflex-wasm/: Cargo.toml
reflex-wasm/docs/: evaluation.gv
reflex-wasm/scripts/: build  compile-templates  compile.mjs  debug  debug-capture  inspect  optimize  perf  test  watch
reflex-wasm/scripts/transform/: lexer.mjs  loader.mjs  parser.mjs  printer.mjs  utils.mjs
reflex-wasm/scripts/transform/directives/: add.mjs  apply.mjs  block.mjs  branch.mjs  builtin.mjs  chain.mjs  char.mjs  concat.mjs  const.mjs  const_init.mjs  const_string.mjs  constructor.mjs  delegate.mjs  derive.mjs  export.mjs  field.mjs  fold.mjs  get.mjs  import.mjs  include.mjs  instruction.mjs  iterate.mjs  iterate_map.mjs  length.mjs  let.mjs  list.mjs  list_item.mjs  map.mjs  method.mjs  reverse.mjs  signatures.mjs  store_bytes.mjs  string_length.mjs  struct.mjs  switch.mjs  template.mjs  to_string.mjs  union.mjs  union_variant.mjs  union_variants.mjs  (+1 more)
reflex-wasm/scripts/transform/templates/: builtin.wat  const.wat  const_init.wat  const_string.wat  iterate.wat  iterate_map.wat  method.wat  struct.wat  union.wat
reflex-wasm/scripts/transform/transforms/: directives.mjs
reflex-wasm/src/: allocator.rs  allocator.wat  browser.debug.mjs  browser.perf.mjs  browser.runner.mjs  browser.test.mjs  builtins.rs  cache.rs  cache.wat  compile.rs  compiler.rs  date.wat  debugger.wat  exports.rs  factory.rs  globals.wat  hash.rs  hash.wat  imports.mjs  index.debug.html  index.perf.html  index.test.html  index.test.mjs  interpreter.rs  io.wat  json.wat  lib.rs  math.wat  node.debug.mjs  node.perf.mjs  node.runner.mjs  node.test.mjs  number.wat  parser.rs  perf.test.mjs  runner.mjs  runtime.mjs  runtime.wat  serialize.rs  snapshot.rs  (+7 more)
reflex-wasm/src/actor/: mod.rs  wasm_interpreter.rs
reflex-wasm/src/cli/: compile.rs  entry_point.rs  mod.rs  snapshot.rs
reflex-wasm/src/cli/compile/: loader.rs
reflex-wasm/src/compiler/: error.rs  globals.rs  mod.rs  term.rs  term_type.rs  wasm.rs
reflex-wasm/src/compiler/instruction/: core.rs  mod.rs  runtime.rs
reflex-wasm/src/compiler/runtime/: builtin.rs  mod.rs
reflex-wasm/src/compiler/wasm/: expand_function_args.rs  generate.rs  get_locals.rs  import_function.rs  mod.rs  transform.rs  types.rs
reflex-wasm/src/stdlib/: abs.rs  abs.test.mjs  abs.wat  add.rs  add.test.mjs  add.wat  and.rs  and.test.mjs  and.wat  apply.rs  apply.test.mjs  apply.wat  car.rs  car.test.mjs  car.wat  cdr.rs  cdr.test.mjs  cdr.wat  ceil.rs  ceil.test.mjs  ceil.wat  chain.rs  chain.test.mjs  chain.wat  collect_constructor.rs  collect_constructor.test.mjs  collect_constructor.wat  collect_hashmap.rs  collect_hashmap.test.mjs  collect_hashmap.wat  collect_hashset.rs  collect_hashset.test.mjs  collect_hashset.wat  collect_list.rs  collect_list.test.mjs  collect_list.wat  collect_record.rs  collect_record.test.mjs  collect_record.wat  collect_signal.rs  (+198 more)
reflex-wasm/src/stdlib/graphql/: graphql_resolver.rs  graphql_resolver.test.mjs  graphql_resolver.wat  mod.rs  resolve_query_branch.rs  resolve_query_branch.test.mjs  resolve_query_branch.wat  resolve_query_leaf.rs  resolve_query_leaf.test.mjs  resolve_query_leaf.wat
reflex-wasm/src/stdlib/handlers/: mod.rs  resolve_loader_results.rs  resolve_loader_results.test.mjs  resolve_loader_results.wat  scan.rs  scan.test.mjs  scan.wat  to_request.rs  to_request.test.mjs  to_request.wat  variable.rs  variable.test.mjs  variable.wat
reflex-wasm/src/stdlib/js/: accessor.rs  accessor.test.mjs  accessor.wat  construct.rs  construct.test.mjs  construct.wat  debug.rs  debug.test.mjs  debug.wat  format_error_message.rs  format_error_message.test.mjs  format_error_message.wat  is_finite.rs  is_finite.test.mjs  is_finite.wat  is_truthy.rs  is_truthy.test.mjs  is_truthy.wat  log.rs  log.test.mjs  log.wat  mod.rs  parse_date.rs  parse_date.test.mjs  parse_date.wat  throw.rs  (+14 more)
reflex-wasm/src/task/: mod.rs  wasm_worker.rs
reflex-wasm/src/term/: application.test.mjs  application.wat  boolean.test.mjs  boolean.wat  builtin.test.mjs  builtin.wat  cell.test.mjs  cell.wat  condition.test.mjs  condition.wat  constructor.test.mjs  constructor.wat  date.test.mjs  date.wat  effect.test.mjs  effect.wat  float.test.mjs  float.wat  hashmap.test.mjs  index.test.mjs  index.wat  int.test.mjs  int.wat  lambda.test.mjs  lambda.wat  let.wat  list.test.mjs  nil.test.mjs  nil.wat  partial.test.mjs  partial.wat  pointer.test.mjs  pointer.wat  record.test.mjs  record.wat  signal.test.mjs  signal.wat  string.test.mjs  string.wat  symbol.test.mjs  (+5 more)
reflex-wasm/src/term_type/: application.rs  application.test.mjs  application.wat  boolean.rs  boolean.test.mjs  boolean.wat  builtin.rs  builtin.test.mjs  builtin.wat  cell.rs  cell.test.mjs  cell.wat  compiled.rs  compiled.test.mjs  compiled.wat  condition.rs  condition.test.mjs  condition.wat  constructor.rs  constructor.test.mjs  constructor.wat  date.rs  date.test.mjs  date.wat  dependency.rs  dependency.wat  effect.rs  effect.test.mjs  effect.wat  float.rs  float.test.mjs  float.wat  hashmap.rs  hashmap.test.mjs  hashmap.wat  hashmap_methods.wat  hashset.rs  hashset.test.mjs  hashset.wat  index.test.mjs  (+45 more)
reflex-wasm/templates/: cached_function.wat
reflex-wasm/tests/: lib.rs
reflex-wasm/tests/compiler/: lazy.rs  mod.rs  runner.rs
reflex/src/: cache.rs  core.rs  env.rs  hash.rs  lib.rs  loader.rs
(+393 files in other folders)
