[package]
name = "reflex-engine"
version = "0.1.0"
authors = ["Tim Kendrick <timkendrick@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-interpreter = { path = "../reflex-interpreter" }
reflex-macros = { path = "../reflex-macros" }
reflex-runtime = { path = "../reflex-runtime" }
reflex-utils = { path = "../reflex-utils" }
reflex-wasm = { path = "../reflex-wasm" }
serde = { version = "1.0", features = ["derive"] }
metrics = "0.18"
