[package]
name = "reflex-tests"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-grpc = { path = "../reflex-grpc" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-js = { path = "../reflex-js" }
reflex-lang = { path = "../reflex-lang" }
reflex-parser = { path = "../reflex-parser" }
reflex-scheduler = { path = "../reflex-scheduler" }
reflex-utils = { path = "../reflex-utils" }
reflex-server = { path = "../reflex-server" }
reflex-wasm = { path = "../reflex-wasm" }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-tungstenite = "0.17.2"
url = "2.2.2"
futures-util = "0.3.23"
