[package]
name = "reflex-wasm"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

[dependencies]
reflex = { path = "../reflex" }
reflex-dispatcher = { path = "../reflex-dispatcher" }
reflex-graphql = { path = "../reflex-graphql" }
reflex-handlers = { path = "../reflex-handlers" }
reflex-js = { path = "../reflex-js" }
reflex-json = { path = "../reflex-json" }
reflex-lang = { path = "../reflex-lang" }
reflex-macros = { path = "../reflex-macros" }
reflex-stdlib = { path = "../reflex-stdlib" }
reflex-utils = { path = "../reflex-utils" }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
metrics = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.22"
strum_macros = "0.22"
walrus = "0.19.0"
wasi-common = "4.0.0"
wasmtime = "4.0.0"
wasmtime-wasi = "4.0.0"
wasm-opt = "0.111.0"
debug-ignore = "1.0.5"
derivative = "2.2.0"

[[bin]]
name = "snapshot"
path = "src/bin/snapshot.rs"
