[package]
name = "reflex-wasm"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marshall Wace LLP <opensource@mwam.com>", "Tim Kendrick <t.kendrick@mwam.com>", "Jordan Hall <j.hall@mwam.com>", "Chris Campbell <c.campbell@mwam.com>"]
edition = "2021"

[dependencies]
reflex = { path = "../reflex" }
strum = "0.22"
strum_macros = "0.22"
